# rust-barcode-generator

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json  templates.json
capabilities/: default.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BarcodeDataInput.tsx  BarcodePreview.tsx  DimensionsConfig.tsx  Navigation.tsx  TemplateManager.tsx  TextStyleConfig.tsx  ValidationNotification.tsx
frontend/src/lib/: LocalApi.ts  interfaces.ts  utils.ts  validationRules.ts
frontend/src/pages/: About.tsx  Contact.tsx  Home.tsx  Templates.tsx  TestPage.tsx
src/: lib.rs  main.rs
src/generator/: barcode_config.rs  bulk_generator.rs  bulk_generator_config.rs  database.rs  exporter.rs  frontend_interface.rs  generator.rs  image_editor.rs  importer.rs  layout.rs  mod.rs  templates.rs  validator.rs
src/generator/exporting/: mod.rs  paper.rs  pdf_exporter.rs  png_exporter.rs
src/lib/: barcode_config.rs  bulk_generator.rs  bulk_generator_config.rs  calculator.rs  exporter.rs  generator.rs  image_editor.rs  importer.rs  mod.rs
src/lib/exporting/: mod.rs  paper.rs  pdf_exporter.rs
src/lib/gui/: interface.rs
