[package]
name = "rust-barcode-generator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line barcode generator written in Rust"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
zxing-cpp = { version = "0.4.1", features = ["bundled", "image"] }