[package]
name = "rust-barcode-generator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line barcode generator written in Rust"
license = "MIT"

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.98"
imageproc = "0.25"
rusttype = "0.9.3"
gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
image = "0.25.6"
zxing-cpp = { version = "0.4.1", features = ["bundled", "image"] }
ab_glyph = "0.2.29"
glyph_brush = "0.7.12"
fontdue = "0.9.3"
csv = "1.3.1"
serde = "1.0.219"
